# code_from_books_and_articles

./: README.md
MaraBos.Rust_Atomics_and_Locks/: README.md  cheatsheet.md  reading_log.md
MaraBos.Rust_Atomics_and_Locks/chapter1/: arc1.rs  borrowing_and_data_races.rs  box_leak.rs  cell.rs  clone_in_the_new_scope.rs  clone_in_the_new_scope2.rs  condvar.rs  list_lock.rs  mutex.rs  mutex_pitfall1.rs  mutex_poisoning.rs  not_send.rs  phantom_data.rs  rc1.rs  refcell.rs  rwlock.rs  static1.rs  thread1.rs  thread3.rs  thread4_retval.rs  thread5_scope.rs  thread_parking.rs  unsafe_send_sync.rs
MaraBos.Rust_Atomics_and_Locks/chapter2/: compare_and_exchange_operation.txt  fetch.txt  fetch_modify.rs  id_allocation.rs  id_allocation_without_overflow.rs  increment.rs  lazy_initialization.rs  lazy_one_time_initialization.rs  progress_reporting.rs  progress_reporting_from_multiple_threads.rs  statistics.rs  stop_flag.rs  synchronization.rs
MaraBos.Rust_Atomics_and_Locks/chapter3/: fence.txt  fences.rs  happens_before_relationship.rs  lazy_initialization_with_indirection.rs  locking.rs  out_of_thin_air_values.rs  relaxed_ordering.rs  release_and_acquire_ordering.rs  release_and_acquire_ordering2.rs  sequentially_consistent_ordering.rs  spawning_and_joining.rs
MaraBos.Rust_Atomics_and_Locks/chapter4/: lockguard.rs  minimal_spinlock.rs  unsafe_spinlock.rs
MaraBos.Rust_Atomics_and_Locks/chapter5/: TODO.md  blocking.rs  borrowing_to_avoid_allocation.rs  safety_through_runtime_checks.rs  safety_through_types.rs  simple_mutex_based_channel.rs  single_atomic_channel_state.rs  unsafe_one_shot_channel.rs
MaraBos.Rust_Atomics_and_Locks/chapter6/: Cargo.toml
MaraBos.Rust_Atomics_and_Locks/chapter6/src/: basic_reference_counting.rs  mutation.rs  optimizing.rs  weak_pointers.rs
MaraBos.Rust_Atomics_and_Locks/chapter7/: README.md  add_ten.rs  add_ten.s  caching1.rs  caching2.rs  caching3.rs  caching4.rs  caching5.rs  caching6.rs  caching7.rs  experiment.rs
MaraBos.Rust_Atomics_and_Locks/chapter8/: Cargo.toml
MaraBos.Rust_Atomics_and_Locks/chapter8/src/: futex.rs  old.pthread_mutex.rs  pthread_mutex.rs
MaraBos.Rust_Atomics_and_Locks/chapter9/: Cargo.toml  README.md
MaraBos.Rust_Atomics_and_Locks/chapter9/src/: condvar1.rs  condvar2.rs  mutex.rs  mutex_3state.rs  mutex_3state_optimizing_further.rs  rwlock1.rs  rwlock2.rs  rwlock3.rs
criterion1/: Cargo.toml  README.md
criterion1/benches/: factorial.rs  my_benchmark.rs  two_functions.rs
criterion1/src/: lib.rs
rust_sdl_snake/: Cargo.toml  README.md
rust_sdl_snake/src/: main.rs
tracing1/: Cargo.toml  README.md
tracing1/src/: advanced_tracing.rs  main.rs
(+3 files in other folders)
