[package]
name = "criterion1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "two_functions"
harness = false

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "my_benchmark"
harness = false
