[package]
name = "tracing1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "advanced_tracing"
path = "src/advanced_tracing.rs"

[dependencies]
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["tracing", "full"] }
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-serde = { version = "0.1.3" }
# tracing-serde-structured = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["tracing-serde", "env-filter", "serde_json", "serde", "json"] }
